[workspace]
members = ["crates/gale-io"]

[package]
name = "gale"
version = "2.0.0-alpha.1"
description = "A lightweight mod manager for Thunderstore"
authors = ["Kesomannen"]
license = "GPL-3.0"
repository = "https://github.com/Kesomannen/gale"
default-run = "gale"
edition = "2021"
rust-version = "1.79"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }

gale-core = { path = "./crates/gale-core" }
gale-thunderstore = { path = "./crates/gale-thunderstore" }
gale-install = { path = "./crates/gale-install" }
gale-profile = { path = "./crates/gale-profile" }
gale-io = { path = "./crates/gale-io" }

tauri-plugin-deep-link = "2.0.0-rc"
tauri-plugin-window-state = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"
tauri-plugin-process = "2.0.0-rc"
tauri-plugin-updater = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.0-rc"
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-single-instance = "2.0.0-rc"
tauri-plugin-cli = "2.0.0-rc"
tauri-plugin-log = "2.0.0-rc"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"

[profile.dev.package.sqlx-macros]
opt-level = 3
