[package]
name = "gale"
version = "1.6.1"
description = "A lightweight mod manager for Thunderstore"
authors = ["Kesomannen"]
license = "GPL-3.0"
repository = "https://github.com/Kesomannen/gale"
default-run = "gale"
edition = "2021"
rust-version = "1.80"

[[bin]]
name = "gale"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset" ] }
tauri-plugin-deep-link = "2"
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "~2.0.0"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

serde_json = "1"
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["full"] }

eyre = "0.6"
thiserror = "1"
justerror = "1"

futures-util = { version = "0.3", features = ["io"] }
indexmap = { version = "2", features = ["serde"] }
open = "5"
itertools = "0.13"
zip = { version = "2", features = ["deflate"] }
uuid = { version = "1", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip"] }
walkdir = "2"
image = "0.25"
semver = { version = "1", features = ["serde"] }
serde_yaml = "0.9"
base64 = "0.22"
heck = "0.5"
chrono = { version = "0.4", features = ["serde"] }
keyring = { version = "3", features = [
    "windows-native",
    "linux-native",
] }
dirs-next = "2"
trash = "5"
tempfile = "3"
rayon = "1"
bytes = "1"
strum = "0.26"
strum_macros = "0.26"
rusqlite = { version = "0.32", features = ["bundled", "uuid", "trace"] }
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
include_dir = "0.7"
keyvalues-serde = "0.2"
clap = { version = "4.5.34", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
blake3 = "1.8.2"

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os="linux")'.dependencies]
webkit2gtk = "2.0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
strip = true      # Remove debug symbols
