[package]
name = "gale-core"
links = "gale-core"
version = "2.0.0-alpha.1"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
log = "0.4"
reqwest = "0.12"
uuid = "1"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
