[package]
name = "gale-profile"
links = "gale-profile"
version = "2.0.0-alpha.1"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }

gale-core = { path = "../gale-core" }
gale-thunderstore = { path = "../gale-thunderstore" }
gale-install = { path = "../gale-install" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
futures-util = "0.3"
log = "0.4"
uuid = "1"
walkdir = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
