[package]
name = "gale-thunderstore"
links = "gale-thunderstore"
version = "2.0.0-alpha.1"
edition = "2021"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["unstable"] }

gale-core = { path = "../gale-core" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "uuid",
    "chrono",
] }
log = "0.4"
anyhow = "1"
thiserror = "1"
futures-util = "0.3"
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1"
reqwest = { version = "0.12", features = ["stream", "gzip"] }
url = "2"
async-stream = "0.3"
bytes = "1"
base64 = "0.22"

[build-dependencies]
tauri-plugin = { version = "2.0.0-rc", features = ["build"] }
