[package]
name = "gale-thunderstore"
version = "0.1.0"
edition = "2024"

[dependencies]
gale-core = { path = "../gale-core" }
gale-util = { path = "../gale-util" }

tauri = { workspace = true }

eyre = "0.6"
tracing = "0.1"

serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

keyring = { version = "3", features = ["windows-native", "linux-native"] }
internment = { version = "0.8", features = ["serde"] }
itertools = "0.13"
uuid = "1"
chrono = { version = "0.4", features = ["serde"] }
semver = { version = "1", features = ["serde"] }
indexmap = { version = "2", features = ["serde"] }
flate2 = "1"
bytes = "1"
reqwest = { workspace = true }
